--- a/hypr/hyprland.org
+++ b/hypr/hyprland.org
@@ -33,8 +33,6 @@
 - [[#gesture][GESTURE]]
 - [[#misc][MISC]]
 - [[#window-rules][WINDOW RULES]]
-  - [[#general-1][General]]
-  - [[#applications-specific][Applications specific]]
 - [[#keybindings][KEYBINDINGS]]
   - [[#variable][Variable]]
   - [[#terminal][Terminal]]
@@ -345,12 +343,11 @@ misc {
 #+end_src
 
 * WINDOW RULES
-** General
 #+begin_src conf
 # Float Necessary Windows
 windowrule = float,Wofi
+windowrule = float,rofi
 windowrule = float,waypaper
-windowrule = float,Tuple
 windowrule = float,pavucontrol
 windowrule = float,foot-float
 windowrule = float,yad|nm-connection-editor|pavucontrolk
@@ -358,6 +355,10 @@ windowrule = float,polkit-gnome|kvantummanager|qt5ct
 windowrule = float,feh|Viewnior|Gpicview|Gimp|nomacs
 windowrule = float,VirtualBox Manager|qemu|Qemu-system-x86_64
 windowrule = float,xfce4-appfinder
+
+# Tuple
+windowrule = float,Tuple
+windowrule = workspace 4,Tuple
 
 # Dolphin
 windowrule = float,^(org.kde.dolphin)$
@@ -370,13 +371,14 @@ windowrulev2=center,class:^(org.gnome.Settings)$
 windowrulev2=size 1280 720,class:^(org.gnome.Settings)$
 
 # Bitwarden
-windowrule = float,^(bitwarden)$
-windowrulev2 = float,title:^(bitwarden)$
+windowrule = float,bitwarden
+windowrulev2 = float,class:^brave-(.*),title:Bitwarden
 
 # Browser
 windowrulev2 = float,class:^()$,title:^(Picture in picture)$
 windowrulev2 = float,class:^(brave)$,title:^(Save File)$
 windowrulev2 = float,class:^(brave)$,title:^(Open File)$
+windowrule = workspace 3,brave-browser
 
 windowrulev2 = float,class:^(blueman-manager)$
 windowrulev2 = float,class:^(org.twosheds.iwgtk)$
@@ -390,6 +392,18 @@ windowrulev2 = noinitialfocus,class:^(xwaylandvideobridge)$
 windowrulev2 = maxsize 1 1,class:^(xwaylandvideobridge)$
 windowrulev2 = noblur,class:^(xwaylandvideobridge)$
 
+# Emacs
+windowrule = workspace 2,^(emacs)$
+
+# Discord
+windowrule = workspace 1,^(discord)$
+
+# Slack
+windowrule = workspace 1,^(slack)$
+
+# All
+windowrule = opacity 0.90 override 0.90 override, .*
+
 #windowrule = move 69 420,abc
 #windowrule = size 420 69,abc
 #windowrule = tile,xyz
@@ -399,11 +413,6 @@ windowrulev2 = noblur,class:^(xwaylandvideobridge)$
 #windowrule = opacity 1.0,abc
 #windowrule = animation slide left,abc
 #windowrule = rounding 10,abc
-#+end_src
-
-** Applications specific
-#+begin_src conf
-windowrule = opacity 0.90 override 0.90 override, .*
 #+end_src
 
 * KEYBINDINGS
