--- a/.config/hypr/hyprland.org
+++ b/.config/hypr/hyprland.org
@@ -242,12 +242,8 @@ group {
     col.border_inactive = $color0
 
     groupbar {
-       enabled = true
-       gradients = false
-       render_titles = false
-
-       height = 40
-
+       gradients = true
+       height = 5
        col.active = $color4
        col.inactive = $color0
     }
