--- a/.config/hypr/hyprland.org
+++ b/.config/hypr/hyprland.org
@@ -388,6 +388,9 @@ misc {
   windowrulev2 = float,class:^(blueberry.py)$
   windowrulev2 = float,class:^(xdg-desktop-portal-gtk)$
 
+  # Rofi
+  windowrule = float,Rofi
+
   # XwaylandBridge
   windowrulev2 = opacity 0.0 override 0.0 override,class:^(xwaylandvideobridge)$
   windowrulev2 = noanim,class:^(xwaylandvideobridge)$
