--- a/.config/hypr/hyprland.org
+++ b/.config/hypr/hyprland.org
@@ -23,6 +23,7 @@
   - [[#wal][Wal]]
   - [[#network-manager][Network-Manager]]
   - [[#xwaylandvideobridge][XWaylandVideoBridge]]
+  - [[#clipboard][Clipboard]]
 - [[#input][INPUT]]
 - [[#general][GENERAL]]
 - [[#cursor][CURSOR]]
@@ -55,6 +56,7 @@
   - [[#workspaces][Workspaces]]
   - [[#send-to-workspaces][Send to Workspaces]]
   - [[#scroll-through-existing-workspaces][Scroll Through Existing Workspaces]]
+  - [[#clipboard-1][Clipboard]]
 - [[#screen-sharing][SCREEN-SHARING]]
 
 * OUTPUT
@@ -173,6 +175,13 @@ exec-once = nm-applet --indicator
 ** XWaylandVideoBridge
 #+begin_src conf
 exec-once = xwaylandvideobridge
+#+end_src
+
+** Clipboard
+#+begin_src conf
+exec-once = wl-paste --type text --watch cliphist store #Stores only text data
+
+exec-once = wl-paste --type image --watch cliphist store #Stores only image data
 #+end_src
 
 * INPUT
@@ -628,6 +637,11 @@ bind = $mainMod CTRL, mouse_up, workspace, +1
 bind = $mainMod CTRL, mouse_down, workspace, -1
 #+end_src
 
+** Clipboard
+#+begin_src conf
+bind = SUPER, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
+#+end_src
+
 
 * SCREEN-SHARING
 #+begin_src conf
@@ -637,6 +651,6 @@ env = XDG_CURRENT_DESKTOP=Hyprland
 env = XDG_SESSION_TYPE=wayland
 env = XDG_SESSION_DESKTOP=Hyprland
 
-exec-once = sleep 1 && dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user import-environment DISPLAY WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 #+end_src
