--- a/.config/hypr/hyprland.org
+++ b/.config/hypr/hyprland.org
@@ -524,7 +524,7 @@ bind = $mainMod SHIFT, F, fullscreen, 1
 bind = $mainMod, Space, togglefloating,
 bind = $mainMod SHIFT, Space, togglesplit,
 bind = $mainMod, P, pseudo,
-bind = $mainMod, O, toggleopaque
+bind = $mainMod, O, hyprctl setprop active opaque toggle
 bind = $mainMod CTRL, Space, pin
 bind = $mainMod, G, togglegroup
 
