--- a/.config/hypr/hyprland.org
+++ b/.config/hypr/hyprland.org
@@ -57,6 +57,7 @@
   - [[#send-to-workspaces][Send to Workspaces]]
   - [[#scroll-through-existing-workspaces][Scroll Through Existing Workspaces]]
   - [[#clipboard-1][Clipboard]]
+- [[#hyprcursor][HYPRCURSOR]]
 - [[#screen-sharing][SCREEN-SHARING]]
 
 * OUTPUT
@@ -288,12 +289,21 @@ decoration {
 * ANMATIONS
 #+begin_src conf
 animations {
-    enabled = yes
-    bezier=overshot,0.13,0.99,0.29,1.1
-    animation=border,1,10,default
-    animation=fade,1,10,default
-    animation=windows,1,4,overshot,slide
-    animation=workspaces,1,6,overshot,slide
+  # enabled = yes
+  # bezier=overshot,0.13,0.99,0.29,1.1
+  # animation=border,1,10,default
+  # animation=fade,1,10,default
+  # animation=windows,1,4,overshot,slide
+  # animation=workspaces,1,6,overshot,slide
+
+  bezier    = overshot, 0.13, 0.99, 0.29, 1.1
+  animation = windows, 1, 6, overshot, slide
+  animation = windowsIn, 1, 6, overshot, slide
+  animation = windowsOut, 1, 6, overshot, slide
+  animation = windowsMove, 1, 6, overshot, slide
+  animation = border, 1, 10, default
+  animation = fade, 1, 6, overshot,
+  animation = workspaces, 1, 5, overshot, slide
 }
 #+end_src
 
@@ -420,8 +430,8 @@ misc {
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
 
-$term = alacritty
-$term2 = terminator
+$term = kitty
+$term2 = alacritty
 $wallpapermenu = ~/.config/rofi/wallpaper.sh
 $thememenu = ~/.config/rofi/theme.sh
 $appmenu = ~/.config/hypr/scripts/menu2
@@ -645,6 +655,10 @@ bind = $mainMod CTRL, mouse_down, workspace, -1
 bind = SUPER, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
 #+end_src
 
+* HYPRCURSOR
+#+begin_src conf
+env = HYPRCURSOR_SIZE,19
+#+end_src
 
 * SCREEN-SHARING
 #+begin_src conf
