--- a/.config/hypr/hyprland.org
+++ b/.config/hypr/hyprland.org
@@ -570,6 +570,9 @@ bind = $mainMod, K, bringactivetotop
 
 bind = $mainMod, J, movefocus, d
 bind = $mainMod, J, bringactivetotop
+
+bind = $mainMod, Comma, focusmonitor, -1
+bind = $mainMod, Semicolon, focusmonitor, +1
 #+end_src
 
 ** Move Window
