--- a/.config/hypr/hyprland.org
+++ b/.config/hypr/hyprland.org
@@ -481,7 +481,7 @@ misc {
   bind = $mainMod, X, exec,$powermenu
   bind = $mainMod, W, exec,$wallpapermenu
   bind = $mainMod, T, exec,$thememenu
-  bind = $mainMod SHIFT, Comma, exec, $help_keybind
+  bind = $mainMod SHIFT, Comma, exec, pkill rofi || $help_keybind
 #+end_src
 
 ** Misc
