--- a/.config/hypr/hyprland.org
+++ b/.config/hypr/hyprland.org
@@ -459,9 +459,9 @@ misc {
 
 ** Terminal
 #+begin_src conf
-  bind = $mainMod,Return,exec,$term
-  bind = $mainMod SHIFT,Return,exec,$term2
-  bind = $mainMod CTRL,Return,exec,[float; size 50%, 60%] $term
+  bind = $mainMod, Return, exec, $term
+  bind = $mainMod SHIFT, Return, exec,$term2
+  bind = $mainMod CTRL, Return, exec, [float; size 50% 60%] $term
 #+end_src
 
 ** Apps
