--- a/.config/hypr/hyprland.org
+++ b/.config/hypr/hyprland.org
@@ -365,6 +365,9 @@ misc {
   windowrulev2 = float,class:^(blueberry.py)$
   windowrulev2 = float,class:^(xdg-desktop-portal-gtk)$
 
+  windowrulev2 = float,class:^kitty$ title:^(float-.*)$
+  windowrulev2 = size 50% 50%,class:^kitty$ title:^(float-.*)$
+
   # Tuple
   windowrule = float,Tuple
   windowrule = workspace 4,Tuple
