--- a/.config/hypr/hyprland.org
+++ b/.config/hypr/hyprland.org
@@ -34,6 +34,7 @@
 - [[#gesture][GESTURE]]
 - [[#misc][MISC]]
 - [[#window-rules][WINDOW RULES]]
+- [[#xwayland][XWayland]]
 - [[#keybindings][KEYBINDINGS]]
   - [[#variable][Variable]]
   - [[#terminal][Terminal]]
@@ -202,8 +203,8 @@ Configure mouse and touchpad here
   source = ~/.cache/wal/colors-hyprland.conf
 
   general {
-      gaps_in = 2
-      gaps_out = 4
+      gaps_in = 4
+      gaps_out = 12
       border_size = 2
       layout = dwindle
       col.active_border = $color4
@@ -217,6 +218,7 @@ Configure mouse and touchpad here
   # Make the cursor disappear after 3 seconds
   cursor {
     inactive_timeout = 3
+    enable_hyprcursor = true
   }
 #+end_src
 
@@ -268,24 +270,40 @@ decoration {
 * ANMATIONS
 #+begin_src conf
   animations {
-    # enabled = yes
-    # bezier=overshot,0.13,0.99,0.29,1.1
-    # animation=border,1,10,default
-    # animation=fade,1,10,default
-    # animation=windows,1,4,overshot,slide
-    # animation=workspaces,1,6,overshot,slide
+  # enabled = yes
+  # bezier=overshot,0.13,0.99,0.29,1.1
+  # animation=border,1,10,default
+  # animation=fade,1,10,default
+  # animation=windows,1,4,overshot,slide
+  # animation=workspaces,1,6,overshot,slide
 
-    bezier    = fast     , 0   , 0.99, 0    , 0.99
-    bezier    = smooth   , 0.1 , 0.99, 0.29 , 1.1
-    bezier    = overshot , 0.05,0.9  ,0.1   ,1.1
+  bezier = easeOutQuint  ,0.23 ,1    ,0.32  ,1
+  bezier = easeInOutCubic,0.65 ,0.05 ,0.36  ,1
+  bezier = linear        ,0    ,0    ,1     ,1
+  bezier = almostLinear  ,0.5  ,0.5  ,0.75  ,1.0
+  bezier = quick         ,0.15 ,0    ,0.1   ,1
 
-    animation = windows    , 1 , 6  , overshot , slide
-    animation = windowsIn  , 1 , 6  , smooth   , slide
-    animation = windowsOut , 1 , 6  , fast     , slide
-    animation = windowsMove, 1 , 6  , overshot , slide
-    animation = border     , 1 , 10 , default
-    animation = fade       , 1 , 6  , overshot ,
-    animation = workspaces , 1 , 5  , overshot , slide
+  bezier = fast          , 0   , 0.99, 0    , 0.99
+  bezier = smooth        , 0.1 , 0.99, 0.29 , 1.1
+  bezier = overshot      , 0.05,0.9  ,0.1   ,1.1
+
+  animation = global         , 1 , 10  , default
+  animation = border         , 1 , 5.39, easeOutQuint
+  animation = windows        , 1 , 4.79, easeOutQuint
+  animation = windowsIn      , 1 , 4.1 , easeOutQuint, popin 87%
+  animation = windowsOut     , 1 , 1.49, linear      , popin 87%
+  animation = fadeIn         , 1 , 1.73, almostLinear
+  animation = fadeOut        , 1 , 1.46, almostLinear
+  animation = fade           , 1 , 3.03, quick
+  animation = layers         , 1 , 3.81, easeOutQuint
+  animation = layersIn       , 1 , 4   , easeOutQuint, fade
+  animation = layersOut      , 1 , 1.5 , linear      , fade
+  animation = fadeLayersIn   , 1 , 1.79, almostLinear
+  animation = fadeLayersOut  , 1 , 1.39, almostLinear
+  animation = workspaces     , 1 , 5   , overshot    , slide
+  # animation = workspaces   , 1 , 1.94, almostLinear, fade
+  # animation = workspacesIn , 1 , 1.21, almostLinear, fade
+  # animation = workspacesOut, 1 , 1.94, almostLinear, fade
   }
 #+end_src
 
@@ -397,7 +415,8 @@ misc {
   windowrule = workspace 1,^(Slack)$
 
   # All
-  windowrule = opacity 0.90 override 0.90 override, .*
+  windowrule = opacity 1 override 0.90 override, .*
+  windowrule = opacity 0.90 override 0.90 override, ^(emacs|kitty|Alacritty)$
 
   # List of options
   #windowrule = move 69 420,abc
@@ -409,6 +428,13 @@ misc {
   #windowrule = opacity 1.0,abc
   #windowrule = animation slide left,abc
   #windowrule = rounding 10,abc
+#+end_src
+
+* XWayland
+#+begin_src conf
+xwayland {
+    enabled = true
+}
 #+end_src
 
 * KEYBINDINGS
