--- a/.config/hypr/hyprland.org
+++ b/.config/hypr/hyprland.org
@@ -216,12 +216,15 @@ Configure mouse and touchpad here
 
   general {
       gaps_in = 4
-      gaps_out = 12
+      gaps_out = 4
       border_size = 2
       layout = dwindle
       col.active_border = $color4
       col.inactive_border = $color0
       allow_tearing = false
+      snap {
+          enabled = true
+      }
   }
 #+end_src
 
@@ -257,25 +260,28 @@ if you want heavy blur, you need to up the blur_passes.
 the more passes, the more you can up the blur_size without noticing artifacts.
 
 #+begin_src conf
-decoration {
-    rounding = 2       # Original: 10
-    drop_shadow = yes
-    shadow_range = 8
-    shadow_offset = 1 2
-    shadow_scale = 0.97
-    shadow_render_power = 3
-    col.shadow_inactive = 0x50000000
-    col.shadow = rgba(1E202966)
-    fullscreen_opacity=0.9
-    blur {
-        enabled = true
-        size = 5 # minimum 1
-        passes = 2 # minimum 1, more passes = more resource intensive.
-        ignore_opacity = false
-    }
-    dim_inactive = true
-    dim_strength = 0.05
-}
+  decoration {
+      rounding = 2       # Original: 10
+      fullscreen_opacity=0.9
+      blur {
+          enabled = true
+          size = 5 # minimum 1
+          passes = 2 # minimum 1, more passes = more resource intensive.
+          ignore_opacity = false
+      }
+      shadow {
+          #drop_shadow = yes
+          enabled = true
+          range = 8
+          offset = 1 2
+          scale = 0.97
+          render_power = 3
+          color = rgba(1E202966)
+          color_inactive = 0x50000000
+      }
+      dim_inactive = true
+      dim_strength = 0.05
+  }
 #+end_src
 
 
